# Mcaster1Studio

./: .gitignore  AI-FEATURES.md  CHANGELOG.md  CHURCH-SURFACE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PODCAST-SURFACE.md  README.md  STANDARDS.md  vcpkg.json
AudioEngine/: CMakeLists.txt
AudioEngine/include/: AudioDevice.h  AudioEngine.h  AudioMixer.h  AudioResampler.h
AudioEngine/src/: AudioDevice.cpp  AudioEngine.cpp  AudioMixer.cpp  AudioResampler.cpp
Core/: CMakeLists.txt
Core/include/: AudioBuffer.h  DatabaseFactory.h  DbServerEntry.h  IAudioEngine.h  IDatabase.h  IDbAwareModule.h  IEffectUnit.h  IModule.h  IModuleHost.h  IPlugin.h  ISurface.h  IThreadPoolAware.h  IcyMetadata.h  Mcaster1AudioPipe.h  Mcaster1SDK.h  MediaItem.h  ModuleEvents.h  ModuleRegistry.h  MonitorManager.h  PooledRunnable.h  SqlDialect.h  SurfaceConfig.h  SurfaceDbContext.h  SurfaceThreadPool.h  ThemePalette.h  ThreadPoolManager.h
Core/src/: DatabaseFactory.cpp  DbServerRegistry.cpp  EventBus.cpp  IcyMetadata.cpp  ModuleRegistry.cpp  MonitorManager.cpp  SqlDialect.cpp  SurfaceConfig.cpp  SurfaceDbContext.cpp  SurfaceManager.cpp  SurfaceThreadPool.cpp  ThemePalette.cpp  ThreadPoolManager.cpp
EffectsPlugins/CompressorLimiter/: CMakeLists.txt  CompressorLimiter.cpp  CompressorLimiter.h
EffectsPlugins/Equalizer31Band/: CMakeLists.txt  Equalizer31Band.cpp  Equalizer31Band.h
EffectsPlugins/SonicMaximizer/: CMakeLists.txt  SonicMaximizer.cpp  SonicMaximizer.h
Modules/AnnounceCasterModule/: AnnounceCasterModule.cpp  AnnounceCasterModule.h  CMakeLists.txt
Modules/AudioMixModule/: AudioMixModule.cpp  AudioMixModule.h  CMakeLists.txt
Modules/AuxDeckModule/: AuxDeckModule.cpp  AuxDeckModule.h  CMakeLists.txt
Modules/CartWallModule/: CMakeLists.txt  CartButton.cpp  CartButton.h  CartPlayer.cpp  CartPlayer.h  CartWallModule.cpp  CartWallModule.h  CartWallWidget.cpp  CartWallWidget.h
Modules/ClockModule/: CMakeLists.txt  ClockModule.cpp  ClockModule.h
Modules/DatabaseModule/: CMakeLists.txt  DatabaseModule.cpp  DatabaseModule.h  DatabaseWidget.cpp  DatabaseWidget.h
Modules/DeckModule/: CMakeLists.txt  CrossfaderModule.cpp  CrossfaderModule.h  CrossfaderSettingsDialog.cpp  CrossfaderSettingsDialog.h  CrossfaderWidget.cpp  CrossfaderWidget.h  DeckAModule.cpp  DeckAModule.h  DeckBModule.cpp  DeckBModule.h  DeckModule.cpp  DeckModule.h  DeckPlayer.cpp  DeckPlayer.h  DeckWidget.cpp  DeckWidget.h  StreamReader.cpp  StreamReader.h  WaveformView.cpp  WaveformView.h
Modules/EffectsRackModule/: CMakeLists.txt  EffectsRackModule.cpp  EffectsRackModule.h  EffectsRackWidget.cpp  EffectsRackWidget.h
Modules/EncoderModule/: AudioRingBuffer.h  CMakeLists.txt  DnasPoller.cpp  DnasPoller.h  EncoderConfig.h  EncoderConfigDialog.cpp  EncoderConfigDialog.h  EncoderDsp.cpp  EncoderDsp.h  EncoderEventLog.h  EncoderListWidget.cpp  EncoderListWidget.h  EncoderLogDialog.cpp  EncoderLogDialog.h  EncoderModule.cpp  EncoderModule.h  EncoderSlot.cpp  EncoderSlot.h  EncoderVuPanel.cpp  EncoderVuPanel.h  IcyPusher.cpp  IcyPusher.h  LiveMonitorChart.cpp  LiveMonitorChart.h  LiveMonitorWindow.cpp  LiveMonitorWindow.h
Modules/GraphicsEngineModule/: CMakeLists.txt  GraphicsEngineModule.cpp  GraphicsEngineModule.h
Modules/HealthModule/: CMakeLists.txt  HealthModule.cpp  HealthModule.h  HealthWidget.cpp  HealthWidget.h  MetricsServer.cpp  MetricsServer.h
Modules/LyricsCasterModule/: CMakeLists.txt  LyricsCasterModule.cpp  LyricsCasterModule.h
Modules/MediaCasterModule/: CMakeLists.txt  MediaCasterModule.cpp  MediaCasterModule.h
Modules/MediaLibraryModule/: AiTrackIntel.cpp  AiTrackIntel.h  AlbumArtCache.cpp  AlbumArtCache.h  ArtistIntelDialog.cpp  ArtistIntelDialog.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FirebirdManager.cpp  FirebirdManager.h  LibraryCategoryPanel.cpp  LibraryCategoryPanel.h  LibraryModel.cpp  LibraryModel.h  LibraryWidget.cpp  LibraryWidget.h  MediaLibraryModule.cpp  MediaLibraryModule.h  MssqlManager.cpp  MssqlManager.h  MusicBrainzLookup.cpp  MusicBrainzLookup.h  PersonaManager.cpp  PersonaManager.h  PostgresManager.cpp  PostgresManager.h  ScanProgressDialog.cpp  ScanProgressDialog.h  ScanWorker.cpp  ScanWorker.h  SqliteManager.cpp  SqliteManager.h
Modules/MetadataModule/: CMakeLists.txt  Icy22EditorWidget.cpp  Icy22EditorWidget.h  MetadataModule.cpp  MetadataModule.h  MetadataPusher.cpp  MetadataPusher.h
Modules/MonitorModule/: CMakeLists.txt  MonitorModule.cpp  MonitorModule.h  MonitorWidget.cpp  MonitorWidget.h
Modules/PTTModule/: CMakeLists.txt  PTTModule.cpp  PTTModule.h  PTTWidget.cpp  PTTWidget.h
Modules/PlaylistModule/: BroadcastLogger.cpp  BroadcastLogger.h  CMakeLists.txt  ClockTemplate.cpp  ClockTemplate.h  PlaylistConfigDialog.cpp  PlaylistConfigDialog.h  PlaylistModule.cpp  PlaylistModule.h  PlaylistWidget.cpp  PlaylistWidget.h
Modules/PodAnalyticsModule/: CMakeLists.txt  PodAnalyticsModule.cpp  PodAnalyticsModule.h
Modules/PodEditorModule/: CMakeLists.txt  PodEditorModule.cpp  PodEditorModule.h
Modules/PodEncodeModule/: CMakeLists.txt  PodEncodeModule.cpp  (+1 more)
SDK/: CMakeLists.txt
UI/: AppRibbon.cpp  AppRibbon.h  CMakeLists.txt  CrossfaderSettingsDialog.cpp  CrossfaderSettingsDialog.h  CustomSurfaceDialog.cpp  CustomSurfaceDialog.h  DbServerDialog.cpp  DbServerDialog.h  DeviceSettingsDialog.cpp  DeviceSettingsDialog.h  MainWindow.cpp  MainWindow.h  ModuleDock.cpp  ModuleDock.h  NowPlayingWidget.cpp  NowPlayingWidget.h  PreferencesDialog.cpp  PreferencesDialog.h  ResizableWidget.cpp  ResizableWidget.h  SubSurfacePanel.cpp  SubSurfacePanel.h  SubSurfaceTabBar.cpp  SubSurfaceTabBar.h  SurfaceConfigYaml.cpp  SurfaceConfigYaml.h  SurfaceEventLog.cpp  SurfaceEventLog.h  SurfaceRibbon.cpp  SurfaceRibbon.h  SurfaceScheduler.cpp  SurfaceScheduler.h  SurfaceSchedulerDialog.cpp  SurfaceSchedulerDialog.h  SurfaceTabBar.cpp  SurfaceTabBar.h  SurfaceTray.cpp  SurfaceTray.h  SurfaceWidget.cpp  (+8 more)
tests/: CMakeLists.txt  test_auxdeck.cpp  test_church.cpp  test_core.cpp  test_databases.cpp  test_modules.cpp  test_podcast.cpp  test_threadpool.cpp
(+96 files in other folders)
